fix bug 537594, linker error on AIX building nsAutoSyncManager, r/sr=bienvenu